# fo4test

./: .gitignore  .gitmodules  BuildReleasePostAE.bat  CMakeLists.txt  CMakePresets.json
cmake/: XSEPlugin.cmake
include/: ffx_framegeneration.h
package/F4SE/Plugins/: FrameGeneration.ini
package/F4SE/Plugins/FrameGeneration/: GenerateSharedBuffersCS.hlsl
package/F4SE/Plugins/Upscaling/: CopyDepthPS.hlsl  CopyDepthVS.hlsl  DilateMotionVectorCS.hlsl  GenerateReactiveMaskCS.hlsl  OverrideDepthCS.hlsl
package/MCM/Config/Upscaling/: config.json  settings.ini
package/MCM/Settings/: Upscaling.ini
package/Meshes/Effects/CameraAttachedFX/: CameraAttach_WetArmorView.nif
package/Scripts/Source/User/Upscaling/: MCM.psc
package/Scripts/Upscaling/: MCM.pex
src/: Buffer.h  DX11Hooks.cpp  DX12SwapChain.cpp  DX12SwapChain.h  FidelityFX.cpp  FidelityFX.h  Hooks.cpp  MotionVectorFixes.cpp  Streamline.cpp  Streamline.h  Upscaling.cpp  Upscaling.h  Util.cpp  Util.h  XSEPlugin.cpp
